# vibecody

./: .dockerignore  .gitignore  .gitleaks.toml  .remarkrc.json  .security-suppressions.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SOUL.md  deny.toml  docker-compose.yml  install.sh  libevent_bus.rlib  libmessage_queue.rlib  libpod_manager.rlib  libsession_tree.rlib  llms.txt
fluxo/fluxo-cli/: Cargo.toml
fluxo/fluxo-cli/src/: main.rs
fluxo/fluxo-cli/tests/: cli.rs
fluxo/fluxo-core/: Cargo.toml
fluxo/fluxo-core/src/: decider.rs  dsl.rs  error.rs  expr.rs  lib.rs  model.rs  run.rs
fluxo/fluxo-engine/: Cargo.toml
fluxo/fluxo-engine/src/: lib.rs
fluxo/fluxo-server/: Cargo.toml
fluxo/fluxo-server/src/: lib.rs  main.rs
fluxo/fluxo-server/tests/: http.rs
fluxo/fluxo-store/: Cargo.toml
fluxo/fluxo-store/src/: lib.rs  memory.rs  postgres.rs  sqlite.rs
fluxo/fluxo-store/tests/: store.rs
fluxo/fluxo-worker/: Cargo.toml
fluxo/fluxo-worker/src/: lib.rs
fluxo/fluxo-worker/tests/: worker.rs
kodegraph/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
kodegraph/docs/: schema.md
kodegraph/examples/: build_graph.rs  mcp_server.rs
kodegraph/src/: builder.rs  cli.rs  incremental.rs  lib.rs  mcp.rs
kodegraph/src/analyze/: blast_radius.rs  communities.rs  god_nodes.rs  mod.rs
kodegraph/src/model/: edge.rs  graph.rs  hyperedge.rs  mod.rs  symbol.rs
kodegraph/src/parse/: lsp.rs  mod.rs  treesitter.rs
kodegraph/src/query/: mod.rs  traversal.rs
kodegraph/src/report/: markdown.rs  mod.rs  render.rs
kodegraph/src/store/: mod.rs  sqlite.rs
skillforgeai-rs/: Cargo.toml  README.md
skillforgeai-rs/src/: lib.rs
skilllensai-rs/: Cargo.toml  README.md
skilllensai-rs/src/: convert.rs  lib.rs  llm.rs  report.rs
skilllensai-rs/src/extract/: mod.rs  parallel.rs  sequential.rs
skilllensai-rs/src/metrics/: eval.rs  mod.rs
skilllensai-rs/src/model/: experience.rs  mod.rs  skill.rs  trajectory.rs
skilllensai-rs/src/store/: mod.rs
skilllensai-rs/tests/: golden_skills.rs
skilloptai-rs/: Cargo.toml  README.md
skilloptai-rs/src/: buffer.rs  edit.rs  env.rs  gate.rs  lib.rs  propose.rs  report.rs  rollout.rs  trainer.rs
vibe-indexer/: Cargo.toml
vibe-indexer/src/: main.rs
vibe-memory/: Cargo.toml  SPEC.md
vibe-memory/src/: error.rs  extension.rs  global_store.rs  hub.rs  lib.rs  project_store.rs  schema.rs
vibe-memory/tests/: global_memory_bdd_test.rs  hub_integration_bdd_test.rs  integration_bdd_test.rs  project_memory_bdd_test.rs
vibe-rl-py/: .gitignore  README.md  pyproject.toml
vibe-rl-py/tests/: test_streamer.py
vibe-rl-py/vibe_rl/: __init__.py  __main__.py  checkpoint.py  cli.py  inference.py  onnx_inference.py  runtime.py  streamer.py
vibe-rl-py/vibe_rl/algos/: distill.py  dpo.py  grpo.py  kto.py  maddpg.py  mappo.py  orpo.py  ppo.py  ppo_rlhf.py  prune.py  qmix.py  quantize.py  reward_model.py
vibe-rl-py/vibe_rl/envs/: registry.py  wrappers.py
vibeapp/src-tauri/: Cargo.toml  tauri.conf.json
vibeapp/src-tauri/capabilities/: default.json
vibeapp/src-tauri/macos/: entitlements.plist
vibeapp/src-tauri/src/: commands.rs  lib.rs  main.rs
vibecli/: Cargo.toml  README.md  test_script.rs
vibecli/crates/vibe-broker/: Cargo.toml
vibecli/crates/vibe-sandbox/: Cargo.toml
vibecli/crates/vibe-sandbox-firecracker/: Cargo.toml
vibecli/crates/vibe-sandbox-hyperlight/: Cargo.toml
vibecli/crates/vibe-sandbox-native/: Cargo.toml
vibecli/vibecli-cli/: Cargo.toml  build.rs
vibecli/vibecli-cli/recipes/: add-api-endpoint.yaml  code-review.yaml  create-feature.yaml  debug-issue.yaml  fix-tests.yaml  refactor.yaml
vibecli/vibecli-cli/scripts/: verify-gmail-oauth-refresh.sh
vibecli/vibecli-cli/skills/: 3d-modeling-cad.md  a2a-protocol.md  a2a-v3.md  abap-sap.md  accessibility-web.md  account-management.md  accounting-bookkeeping.md  actionscript-flash.md  ada-spark.md  aerospace-avionics.md  aerospace-space-systems.md  agent-analytics.md  agent-autoscale.md  agent-await.md  agent-development.md  agent-faas-k8s.md  agent-host.md  agent-mcp-acp.md  agent-modes.md  agent-persistence.md  agent-quota.md  agent-recruiter.md  agent-registry.md  agent-replay.md  agent-skills-standard.md  agent-state-machine.md  agent-teams-hierarchy.md  agent-trust.md  agile-project-management.md  agriculture-agtech.md  ai-agent-development.md  ai-code-review.md  ai-governance-ethics.md  ai-langchain.md  ai-llm-engineering.md  ai-merge.md  ai-model-integration.md  ai-prompt-engineering.md  ai-rag-pipeline.md  alt-explore.md  (+670 more)
vibecli/vibecli-cli/src/: a11y_agent.rs  a2a_http.rs  a2a_protocol.rs  acp.rs  acp_protocol.rs  acp_stdio.rs  adapter_registry.rs  agent_analytics.rs  agent_autoscale.rs  agent_await.rs  agent_host.rs  agent_modes.rs  agent_persistence.rs  agent_quota.rs  agent_recruiter.rs  agent_registry.rs  agent_replay.rs  agent_skills_compat.rs  agent_state_machine.rs  agent_teams_v2.rs  agent_teams_v2_enhanced.rs  agent_trust.rs  agentic_cicd.rs  ai_code_review.rs  ai_merge.rs  alt_explore.rs  api_key_monitor.rs  api_sketch.rs  app_builder.rs  app_server.rs  architecture_spec.rs  ast_edit.rs  async_subagent.rs  audio_output.rs  auth_util.rs  auto_approve.rs  auto_deploy.rs  auto_research.rs  auto_stub.rs  (+388 more)
vibecli/vibecli-core/: Cargo.toml
vibedesk/src-tauri/: Cargo.toml  tauri.conf.json
vibeui/: .vibeui.md  Cargo.toml  DEBUG.md  EXAMPLE.md  PANEL-GUIDELINES.md  README.md  TESTING.md  design-system-audit.md  eslint.config.js  index.html  package.json  playwright.config.ts  test_diff.cjs  vite.config.ts  vitest.config.ts
vibeui/design-system/: README.md  tokens.css
vibeui/e2e/: new_file_folder.spec.ts
vibeui/playwright-report/: index.html
vibeui/public/: inspector.js
vibeui/scripts/: audit-design-system.mjs  codemod-grid-snap.mjs  codemod-hex-to-vars.mjs  codemod-tab-class.mjs
vibeui/src/: ActivityBar.css  App.css  App.tsx  main.tsx
vibeui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  vibe.toml
vibex/src-tauri/: Cargo.toml  tauri.conf.json
(+1772 files in other folders)
