[workspace]
resolver = "2"
members = [
    "vibecli/vibecli-cli",
    "vibeui/src-tauri",
    "vibeui/crates/vibe-core",
    "vibeui/crates/vibe-lsp",
    "vibeui/crates/vibe-ai",
    "vibeui/crates/vibe-extensions",
    "vibeui/crates/vibe-collab",
    "vibeapp/src-tauri",
    "vibe-indexer",
]

[workspace.package]
version = "0.5.4"
edition = "2021"
authors = ["Vibe Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client for LLM APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Diff
similar = { version = "2.6", features = ["inline"] }

# Git
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# LSP
lsp-types = "0.97"
url = "2.5"

# Text processing
ropey = "1.6"

# File watching
notify = "7.0"

# Search
walkdir = "2"
regex = "1"

# Terminal
portable-pty = "0.8"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# HTTP server (daemon mode)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "set-header"] }

# SQLite (session store)
rusqlite = { version = "0.39", features = ["bundled"] }

# Crypto (AWS SigV4 signing)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# VibeCLI benefits from runtime speed over binary size
[profile.release.package.vibecli]
opt-level = 2
