[workspace]
resolver = "2"
members = [
    "vibecli/vibecli-cli",
    "vibecli/crates/vibe-sandbox",
    "vibecli/crates/vibe-sandbox-native",
    "vibecli/crates/vibe-sandbox-firecracker",
    "vibecli/crates/vibe-sandbox-hyperlight",
    "vibecli/crates/vibe-broker",
    "vibeui/src-tauri",
    "vibeui/crates/vibe-core",
    "vibeui/crates/vibe-lsp",
    "vibeui/crates/vibe-ai",
    "vibeui/crates/vibe-infer",
    "vibeui/crates/vibe-extensions",
    "vibeui/crates/vibe-collab",
    "vibeapp/src-tauri",
    "vibex/src-tauri",
    "vibe-indexer",
    "vibe-memory",
    "kodegraph",
    "skilllensai-rs",
    "skilloptai-rs",
    "skillforgeai-rs",
]

[workspace.package]
version = "0.5.7"
edition = "2021"
authors = ["Vibe Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# HTTP client for LLM APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Diff
similar = { version = "2.6", features = ["inline"] }

# Git
git2 = { version = "0.21.0", features = ["vendored-openssl"] }

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# LSP
lsp-types = "0.97"
url = "2.5"

# Text processing
ropey = "1.6"

# File watching
notify = "8.2"

# Search
walkdir = "2"
regex = "1"

# Terminal
portable-pty = "0.9"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# HTTP server (daemon mode)
axum = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.7", features = ["cors", "set-header"] }

# SQLite (session store)
rusqlite = { version = "0.40", features = ["bundled"] }

# Crypto (AWS SigV4 signing)
sha2 = "0.10"
hmac = "0.12"
p256 = { version = "0.13", features = ["ecdsa"] }
hex = "0.4"

# Code knowledge graph (kodegraph) — incremental AST-based symbol/edge graphs
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.23"
petgraph = "0.7"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# VibeCLI benefits from runtime speed over binary size
[profile.release.package.vibecli]
opt-level = 2
