[package]
name = "vibe-memory"
version = "0.1.0"
edition = "2021"
description = "Local SQLite vector memory for VibeCody — project-scoped and computer-scoped"
authors = ["VibeCody Team"]
license = "MIT OR Apache-2.0"

[features]
default = ["bundled"]
bundled = ["dep:rusqlite"]
system = ["dep:rusqlite"]
encryption = ["chacha20poly1305", "getrandom"]

[dependencies]
# Use same version as vibeui for compatibility (bundled SQLite)
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "macros"] }
chacha20poly1305 = { version = "0.10", optional = true }
getrandom = { version = "0.4", optional = true }

sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
bincode = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
futures = "0.3"

[lib]
name = "vibe_memory"
path = "src/lib.rs"
