[workspace]
resolver = "2"
members = [
    "vibecli-core",
    "vibecli-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VibeCLI Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Diff
similar = { version = "2.6", features = ["inline"] }

# Git
git2 = "0.19"

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
