[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/vibe-core",
    "crates/vibe-lsp",
    "crates/vibe-ai",
    "crates/vibe-extensions",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VibeUI Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# LSP
lsp-types = "0.97"
url = "2.5"

# Text processing
ropey = "1.6"

# HTTP client for AI APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
