[package]
name = "fluxo-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fluxo execution engine: register, start, decide-to-fixed-point, poll, and complete tasks."

[dependencies]
fluxo-core = { path = "../fluxo-core" }
fluxo-store = { path = "../fluxo-store" }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
