[package]
name = "vibeapp"
version.workspace = true
description = "Standalone VibeCody desktop application shell"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibeapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
