[package]
name = "vibecli"
version.workspace = true
description = "Terminal AI coding assistant with REPL, agent, and multi-provider support"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibecli_cli"
path = "src/lib.rs"

[[bin]]
name = "vibecli"
path = "src/main.rs"

[dependencies]
vibe-core = { path = "../../vibeui/crates/vibe-core" }
vibe-ai = { path = "../../vibeui/crates/vibe-ai" }
syntect.workspace = true
tokio.workspace = true
clap.workspace = true
ratatui.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rustyline = { version = "14.0", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
crossterm = { workspace = true, features = ["event-stream"] }
serde = { workspace = true, features = ["derive"] }
toml = "0.8"
async-trait.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
urlencoding = "2.1"
axum.workspace = true
tower-http.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tempfile = "3"
rand = "0.8"
walkdir = { workspace = true }
rusqlite = { workspace = true }
notify = { workspace = true }
serde_yaml = "0.9"
vibe-collab = { path = "../../vibeui/crates/vibe-collab" }
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
uuid.workspace = true
base64 = "0.22"
keyring = "2"
chacha20poly1305 = "0.10"
chrono = "0.4"
clap_complete = "4"
zip = "2"
handlebars = "6"

# OpenTelemetry (OTLP/HTTP export)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"

[dev-dependencies]
tower.workspace = true
cucumber = { version = "0.20", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# Claw-code parity BDD test harnesses — Wave 1
[[test]]
name = "workspace_fingerprint_bdd"
path = "tests/workspace_fingerprint_bdd.rs"
harness = false

[[test]]
name = "tool_pair_compaction_bdd"
path = "tests/tool_pair_compaction_bdd.rs"
harness = false

[[test]]
name = "session_health_probe_bdd"
path = "tests/session_health_probe_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 2
[[test]]
name = "bash_classifier_bdd"
path = "tests/bash_classifier_bdd.rs"
harness = false

[[test]]
name = "branch_lock_bdd"
path = "tests/branch_lock_bdd.rs"
harness = false

[[test]]
name = "worker_bootstrap_bdd"
path = "tests/worker_bootstrap_bdd.rs"
harness = false

[[test]]
name = "recovery_recipe_bdd"
path = "tests/recovery_recipe_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 3
[[test]]
name = "lane_events_bdd"
path = "tests/lane_events_bdd.rs"
harness = false

[[test]]
name = "quality_gates_bdd"
path = "tests/quality_gates_bdd.rs"
harness = false

[[test]]
name = "stale_branch_bdd"
path = "tests/stale_branch_bdd.rs"
harness = false

# Claw-code parity BDD test harnesses — Wave 4
[[test]]
name = "trust_resolution_bdd"
path = "tests/trust_resolution_bdd.rs"
harness = false

[[test]]
name = "config_layers_bdd"
path = "tests/config_layers_bdd.rs"
harness = false

[[test]]
name = "hook_abort_bdd"
path = "tests/hook_abort_bdd.rs"
harness = false
